Template Start step 5 Base Start OK

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,5 +9,7 @@
     "Scuro" : "Dark",
     "Gestione Processo Email" : "Email Process Management",
     "Lista Stato Processi" : "Status List Process",
-    "Pagina principale" : "Home Page"
+    "Pagina principale" : "Home Page",
+    "Cambio Password" : "Change Password",
+    "Effettuare l'accesso per proseguire" : "Please log in to continue"
 }
