--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -9,5 +9,6 @@
     "Scuro" : "Scuro",
     "Gestione Processo Email" : "Gestione Processo Email",
     "Lista Stato Processi" : "Lista Stato Processi",
-    "Pagina principale" : "Pagina principale"
+    "Cambio Password" : "Cambio Password",
+    "Effettuare l'accesso per proseguire" : "Effettuare l'accesso per proseguire"
 }
