--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -10,5 +10,6 @@
     "Gestione Processo Email" : "Gestione Processo Email",
     "Lista Stato Processi" : "Lista Stato Processi",
     "Cambio Password" : "Cambio Password",
-    "Effettuare l'accesso per proseguire" : "Effettuare l'accesso per proseguire"
+    "Effettuare l'accesso per proseguire" : "Effettuare l'accesso per proseguire",
+    "Errore server o nella comunicazione, riprovare più tardi." : "Errore server o nella comunicazione, riprovare più tardi."
 }
