--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,5 +21,10 @@
     "Va al dettaglio": "Go to details",
     "Esegui": "Execute",
     "Reimposta": "Reset",
-    "Filtri": "Search"
-}
+    "Filtri": "Search",
+    "Allegati": "Attachments",
+    "Scarica Files Selezionati": "Download Selected Files",
+    "Unisce Files Selezionati e Scarica": "Merge Selected Files and Download",
+    "Allegato non presente": "Attachment not available",
+    "Selezionare almeno due files per procedere con l'unione": "Select at least two files to proceed with the merge",
+    "Selezionare almeno un file per procedere con il download" : "Select at least one file to proceed with the download"
