--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -26,5 +26,8 @@
     "Unisce Files Selezionati e Scarica": "Unisce Files Selezionati e Scarica",
     "Allegato non presente": "Allegato non presente",
     "Selezionare almeno due files per procedere con l'unione": "Selezionare almeno due files per procedere con l'unione",
-    "Selezionare almeno un file per procedere con il download" : "Selezionare almeno un file per procedere con il download"
+    "Selezionare almeno un file per procedere con il download" : "Selezionare almeno un file per procedere con il download",
+    "Dettagli Richiesta": "Dettagli Richiesta",
+    "Elaborata": "Elaborata",
+    "Torna alla lista" : "Torna alla lista"
 }
