--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -48,7 +48,9 @@
     "Operazione effettuata con successo" : "Operazione effettuata con successo",
     "Successo" : "Successo",
     "Errore" : "Errore",
-    "Si è verificato un errore durante l'ultima operazione: <br/><br/>" : "Si è verificato un errore durante l'ultima operazione: <br/><br/>"
+    "Si è verificato un errore durante l'ultima operazione: <br/><br/>" : "Si è verificato un errore durante l'ultima operazione: <br/><br/>",
+    "Nuova richiesta" : "Nuova richiesta",
+    "Corpo" : "Corpo"
 
 
 
