--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -50,10 +50,10 @@
     "Errore" : "Errore",
     "Si è verificato un errore durante l'ultima operazione: <br/><br/>" : "Si è verificato un errore durante l'ultima operazione: <br/><br/>",
     "Nuova richiesta" : "Nuova richiesta",
-    "Corpo" : "Corpo"
-
-
-
-
+    "Corpo" : "Corpo",
+    "Trascina i files qui!" : "Trascina i files qui!",
+    "Sfoglia" : "Sfoglia",
+    "Describe the RFQ request..." : "Describe the RFQ request...",
+    "Valorizzare il campo" : "Valorizzare il campo"
 
 }
