Ask AI in progress

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -55,6 +55,7 @@
     "Sfoglia" : "Sfoglia",
     "Describe the RFQ request..." : "Describe the RFQ request...",
     "Valorizzare il campo" : "Valorizzare il campo",
-    "Chiedi ad AI" : "Chiedi ad AI"
+    "Chiedi ad AI" : "Chiedi ad AI",
+    "Chiedi qualcosa alla AI!" : "Chiedi qualcosa alla AI!"
 
 }
