--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -56,6 +56,7 @@
     "Sfoglia" : "Browse",
     "Describe the RFQ request..." : "Describe the RFQ request...",
     "Valorizzare il campo" : "Field required",
-    "Chiedi ad AI" : "Ask AI"
+    "Chiedi ad AI" : "Ask AI",
+    "Chiedi qualcosa alla AI!" : "Ask something to AI!"
 
 }
