--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -56,6 +56,8 @@
     "Describe the RFQ request..." : "Describe the RFQ request...",
     "Valorizzare il campo" : "Valorizzare il campo",
     "Chiedi ad AI" : "Chiedi ad AI",
-    "Chiedi qualcosa alla AI!" : "Chiedi qualcosa alla AI!"
+    "Chiedi qualcosa alla AI!" : "Chiedi qualcosa alla AI!",
+    "Aggiorna" : "Aggiorna",
+    "Invia richiesta" : "Invia richiesta"
 
 }
