--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,7 +32,7 @@
     "Da elaborare": "In processing",
     "Elaborata": "Processed",
     "In revisione" : "Under review",
-    "Finalizzata" : "Finalized",
+    "In finalizzazione" : "Finalizing",
     "Tutti" : "All",
     "Confermi l'operazione?" : "Do you confirm the operation?",
     "Annulla" : "Cancel",
@@ -44,7 +44,7 @@
     "Le password non coincidono" : "Passwords do not match",
     "Modifica password": "Change Password",
     "Cerca": "Search",
-    "Confermando l'operazione non sarà più possibile modificare i paragrafi. Prosegui?" : "By confirming the operation, it will no longer be possible to modify the paragraphs. Do you want to proceed?",
+    "Confermando l'operazione non sarà più possibile effettuare modifiche. Prosegui?" : "By confirming the operation, it will no longer be possible to make changes . Do you want to proceed?",
     "Finalizza" : "Finalize",
     "Operazione effettuata con successo" : "Operation completed successfully",
     "Successo" : "Success",
@@ -59,6 +59,9 @@
     "Chiedi ad AI" : "Ask AI",
     "Chiedi qualcosa alla AI!" : "Ask something to AI!",
     "Aggiorna" : "Update",
-    "Invia richiesta" : "Send Request"
+    "Invia richiesta" : "Send Request",
+    "Completata" : "Completed",
+    "Completata!" : "Completed!",
+    "Risultato" : "Result"
 
 }
