Download files inizio

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,6 +62,8 @@
     "Invia richiesta" : "Send Request",
     "Completata" : "Completed",
     "Completata!" : "Completed!",
-    "Risultato" : "Result"
+    "Risultati" : "Results",
+    "Scarica risultati" : "Download Results",
+    "Scarica allegati" : "Download Attachments"
 
 }
