--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -61,7 +61,9 @@
     "Invia richiesta" : "Invia richiesta",
     "Completata" : "Completata",
     "Completata!" : "Completata!",
-    "Risultato" : "Risultato"
+    "Risultati" : "Risultati",
+    "Scarica risultati" : "Scarica risultati",
+    "Scarica allegati" : "Scarica allegati"
 
 
 }
