--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -39,7 +39,7 @@
     "Conferma" : "Confirm",
     "Si" : "Yes",
     "Password attuale" : "Current Password",
-    "Nuova Password" : "New Password",
+    "Nuova password" : "New Password",
     "Ripeti nuova password" : "Repeat New Password",
     "Le password non coincidono" : "Passwords do not match",
     "Modifica password": "Change Password",
@@ -64,6 +64,10 @@
     "Completata!" : "Completed!",
     "Risultati" : "Results",
     "Scarica risultati" : "Download Results",
-    "Scarica allegati" : "Download Attachments"
+    "Scarica allegati" : "Download Attachments",
+    "Inserire un valore per la nuova password" : "Enter a value for the new password",
+    "La nuova password e ripeti password devono coincidere" : "The new password and repeat password must match",
+    "Inserire un valore per la password attuale" : "Enter a value for the current password",
+    "La password deve avere almeno 8 caratteri, una maiuscola, una minuscola, un numero e un carattere speciale" : "The password must have at least 8 characters, one uppercase letter, one lowercase letter, one number and one special character"
 
 }
